syntax = "proto3";
package models.grpc.auth;
option go_package = "github.com/bptlab/cepta/models/grpc/auth";

import "models/types/users.proto";

service Authentication {
  rpc Login(UserLoginRequest) returns (AuthenticationToken) {}
  rpc Validate(TokenValidationRequest) returns (TokenValidationResult) {}
}

message UserLoginRequest {
  string email = 1;
  string password = 2;
  bool remember = 3;
}

message TokenValidationRequest {
  string token = 1;
}

message  TokenValidationResult {
  bool valid = 1;
  string email = 2;
}

message AuthenticationToken {
  string token = 1;
  models.types.users.UserID user_id = 2;
  string email = 3;
  int64 expiration = 4;
}