syntax = "proto3";
package models.types.users;
option go_package = "github.com/bptlab/cepta/models/types/users";

import "models/types/transports.proto";

message UserID {
    string id = 1;
}

message User {
    UserID id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    repeated models.types.transports.TransportID transports = 5;
}

message InternalUser {
    User user = 1;
    string password = 3;
}
